Remove java compiler